force-app/main/default/objects/Grant_Assignment__c/Grant_Assignment__c.object-meta.xml
<CustomObject>
    <description>Junction object between Volunteer Assignment and Grant Contact.</description>
    <label>Grant Assignment</label>
    <nameField>
        <displayFormat>GA{00000000}</displayFormat>
        <label>Grant Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>