force-app/main/default/objects/Grant_Assignment__c/fields/Grant_Contact__c.field-meta.xml
<CustomField>
    <fullName>Grant_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup relationship to the Grant Contact object.</description>
    <inlineHelpText>Use this field to associate a volunteer assignment to grant contact.</inlineHelpText>
    <label>Grant Contact</label>
    <referenceTo>Grant_Contact__c</referenceTo>
    <relationshipLabel>Grant Assignments</relationshipLabel>
    <relationshipName>Grant_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>