force-app/main/default/objects/Grant_Assignment__c/fields/Grant_Contact_Id_Text__c.field-meta.xml
<CustomField>
    <fullName>Grant_Contact_Id_Text__c</fullName>
    <label>Grant Contact Id Text</label>
    <length>18</length>
    <type>Text</type>
</CustomField>