force-app/main/default/objects/Grant_Assignment__c/fields/Volunteer_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup relationship to the Volunteer_Assignment object.</description>
    <inlineHelpText>Use this field to associate a volunteer assignment to grant contact.</inlineHelpText>
    <label>Volunteer Assignment</label>
    <referenceTo>Volunteer_Assignment__c</referenceTo>
    <relationshipLabel>Grant Assignments</relationshipLabel>
    <relationshipName>Grant_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>