force-app/main/default/objects/Grant_Assignment__c/fields/Volunteer_Assignment_Id_Text__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Assignment_Id_Text__c</fullName>
    <label>Volunteer Assignment Id Text</label>
    <length>18</length>
    <type>Text</type>
</CustomField>